--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
     <section id="about" class="about section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
+        <h2>About Reagan Ochola</h2>
         <p>Strategic MEL Leader | Multi-Country Donor Programs | Power BI • SQL • Python • Data Governance | 9+ Years Experience</p>
       </div><!-- End Section Title -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -61,19 +61,24 @@
       <div class="col-lg-7 text-center" data-aos="fade-right" data-aos-delay="150">
         <div class="intro-content">
           <span class="eyebrow">Strategic MEL Leader</span>
-          <h2 class="headline">Transforming complex datasets into evidence-based insights across Africa</h2>
+          <h2 class="headline">The Strategist and The Technologist</h2>
           <p class="lead">
-            My work is 'simple': I make change measurable and sustainable. For nearly a decade, I've led Monitoring, Evaluation, and Learning (MEL) efforts, architecting the systems that track success across multi-country donor-funded initiatives. I don't just collect data; I translate it into the clear, compelling evidence partners need to make smart, strategic pivots and lock in long-term program impact. </p>
-          <p>
-            Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
+            I am Reagan Ochola, a Strategic Monitoring, Evaluation, and Learning (MEL) Leader who believes that the most powerful data is the data that drives immediate, measurable action. For over nine years, I have specialized in bridging the critical gap between high-level donor strategy and the complex reality of data collection in multi-country development programs. My work is dedicated to transforming raw field data into clear, actionable evidence that enhances program sustainability and impact.
+            My approach is defined by a commitment to efficiency and precision. By automating data pipelines and optimizing MEL systems, I have consistently delivered tangible results, including cutting reporting turnaround time by 50% and reducing survey errors by 35%. I translate these efficiencies into strategic gains, such as the 8.1% training-efficiency gain identified in the Kenya MSME Manufacturing Analysis, ensuring every program resource is directed by rigorous evidence.
+          </p>
+          <h2 class="headline">From Frameworks to Full-Stack Analytics</h2>
+          <p class="lead">
+            My career began with a deep focus on designing robust, donor-compliant MEL frameworks. I learned firsthand that a well-designed framework is the bedrock of sustainable development, but I also witnessed the limitations of manual processes when managing 50+ staff and vast, complex datasets. This challenge sparked a pivotal transition in my professional journey.
+            Driven by the need for agility and precision, I embraced the power of data science. I mastered Power BI for developing real-time, interactive dashboards that serve as the single source of truth for executive leadership and field teams alike. I leverage SQL to build scalable, reliable data infrastructure and Python for advanced data cleaning, geospatial analysis, and reproducible research. Today, I operate at the intersection of strategy and technology, designing adaptive MEL systems that are not only compliant but are also fully automated and directly feed into evidence-based decision-making.
+          </p>
+          <h2 class="headline">Data Must Serve the Mission</h2>
+          <p class="lead">
+            My professional philosophy is simple and unwavering: Data must serve the mission. It is not enough to collect data; we must translate it into the clearest possible narrative to drive change. Every framework, every dashboard, and every analysis I build is designed to make the 'learning' in MEL a proactive, continuous process.
+            I am motivated by the challenge of scaling data-driven MEL across complex, multi-stakeholder environments. I am focused on building resilient, self-sustaining systems that move organizations past simply measuring outputs and towards a deep, evidence-based understanding of why and how change occurs. If you are looking for a leader who can bridge the gap between program strategy and technical data execution to maximize impact, I invite you to explore my portfolio.
           </p>
           <div class="cta-group">
             <a href="#portfolio" class="btn-ghost">
               View My Work <i class="bi bi-arrow-up-right"></i>
-            </a>
-            <a href="assets/files/resume.pdf" class="link-underline" download>
-              Download Resume <i class="bi bi-download"></i>
-            </a>
           </div>
         </div>
       </div>
