--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
           <span class="eyebrow">Strategic MEL Leader</span>
           <h2 class="headline">The Strategist and The Technologist</h2>
           <p class="lead">
-            I am Reagan Ochola, a Strategic Monitoring, Evaluation, and Learning (MEL) Leader who believes that the most powerful data is the data that drives immediate, measurable action. For over nine years, I have specialized in bridging the critical gap between high-level donor strategy and the complex reality of data collection in multi-country development programs. My work is dedicated to transforming raw field data into clear, actionable evidence that enhances program sustainability and impact.
+            A Strategic Monitoring, Evaluation, and Learning (MEL) Leader who believes that the most powerful data is the data that drives immediate, measurable action. For over nine years, I have specialized in bridging the critical gap between high-level donor strategy and the complex reality of data collection in multi-country development programs. My work is dedicated to transforming raw field data into clear, actionable evidence that enhances program sustainability and impact.
             My approach is defined by a commitment to efficiency and precision. By automating data pipelines and optimizing MEL systems, I have consistently delivered tangible results, including cutting reporting turnaround time by 50% and reducing survey errors by 35%. I translate these efficiencies into strategic gains, such as the 8.1% training-efficiency gain identified in the Kenya MSME Manufacturing Analysis, ensuring every program resource is directed by rigorous evidence.
           </p>
           <h2 class="headline">From Frameworks to Full-Stack Analytics</h2>
