--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         
         <!-- Centered Buttons -->
         <div class="hero-actions d-flex justify-content-center gap-3 mt-4" data-aos="fade-up" data-aos-delay="500">
-          <a href="portfolio.html" class="btn btn-primary">View My Work</a>
-          <a href="contact.html" class="btn btn-outline">Get In Touch</a>
+          <a href="portfolio.html" class="btn btn-primary">Explore Case Studies</a>
+          <a href="contact.html" class="btn btn-outline">Discuss Your Strategy</a>
         </div>
       
         <!-- Social Links -->
