--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           </p>
           <div class="cta-group">
             <a href="#portfolio" class="btn-ghost">
-              View My Work <i class="bi bi-arrow-up-right"></i>
+              Explore Case Studies <i class="bi bi-arrow-up-right"></i>
           </div>
         </div>
       </div>
