--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <!-- Featured Projects Cards -->
               <div class="mt-5" data-aos="fade-up" data-aos-delay="500">
-                <h4>Featured Projects</h4>
+                <h4>See How Data Drives Strategic Impact</h4>
                 <div class="row g-3">
                   <div class="col-md-6">
                     <div class="card h-100">
@@ -103,10 +103,10 @@
                   <div class="col-md-6">
                     <div class="card h-100">
                       <div class="card-body">
-                        <h6 class="card-title">East Africa Maize Yield Dashboard</h6>
-                        <p class="card-text">Interactive Power BI dashboard for 18 000+ farmers</p>
-                        <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" target="_blank" class="btn btn-sm btn-outline-primary">
-                          <i class="bi bi-github"></i> View Details
+                        <h6 class="card-title">Pricing Model Analysis</h6>
+                        <p class="card-text">Data-driven financial pricing model for agricultural product bundles</p>
+                        <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" target="_blank" class="btn btn-sm btn-outline-primary">
+                          <i class="bi bi-github"></i> View Code
                         </a>
                       </div>
                     </div>
