--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div class="col-md-6">
                     <div class="card h-100">
                       <div class="card-body">
-                        <h6 class="card-title">Pricing Model Analysis</h6>
+                        <h6 class="card-title">Pricing Model Analysis: Malawi 2024</h6>
                         <p class="card-text">Data-driven pricing model for agricultural product bundles</p>
                         <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" target="_blank" class="btn btn-sm btn-outline-primary">
                           <i class="bi bi-github"></i> View Code
