--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
 
-            <!-- 1️⃣ MSME Manufacturing Study -->
+            <!-- 1️⃣ Kenya MSME Manufacturing Analysis -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-research">
               <div class="portfolio-card h-100">
                 <div class="portfolio-img">
@@ -146,7 +146,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dashboard filter-agriculture">
               <div class="portfolio-card h-100">
                 <div class="portfolio-img">
-                 <div class="portfolio-overlay">
+                  <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="https://github.com/Ocholar/AgroDashboard" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -157,6 +157,28 @@
                   <div class="portfolio-tags"><span>Plotly Dash</span><span>Geospatial</span></div>
                   <div class="repo-links mt-2">
                     <a href="https://github.com/Ocholar/AgroDashboard" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 5️⃣ County Agricultural Production Analysis -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-dashboard">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-5.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/county-agricultural-production-analysis" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>County Agricultural Production Analysis</h4>
+                  <p>An analytical dashboard leveraging Power BI and SQL to visualize county-level agricultural production trends.</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>SQL</span><span>Agriculture</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
                       <i class="bi bi-github"></i> View Code
                     </a>
                   </div>
@@ -193,7 +215,7 @@
       <div class="credits">
         Certifications: Google BI · AI-for-MEL · Microsoft Data Analysis · BCG Forage<br>
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>>
+      </div>
     </div>
   </footer><!-- /Footer -->
 
