--- a/portfolio.html
+++ b/portfolio.html
@@ -174,9 +174,9 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>County Agricultural Production Analysis</h4>
-                  <p>An analytical dashboard leveraging Power BI and SQL to visualize county-level agricultural production trends.</p>
-                  <div class="portfolio-tags"><span>Power BI</span><span>SQL</span><span>Agriculture</span></div>
+                  <h4>Agricultural Production Analysis </h4>
+                  <p>An analytical dashboard leveraging Power BI and Python to visualize county-level agricultural production trends.</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>Python</span><span>Agriculture</span></div>
                   <div class="repo-links mt-2">
                     <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
                       <i class="bi bi-github"></i> View Code
