--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
-  <meta name="description" content="Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Expert in Power BI, SQL, Python, and agricultural data analytics.">
-  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning">
+  <title>Portfolio - Reagan Ochola | Strategic MEL Leader (9 yrs) • Power BI • SQL • Python</title>
+  <meta name="description" content="Portfolio of Reagan Ochola – 9 years designing MEL frameworks for multi-country donor programmes, Power BI + SQL automation, 50+ staff, 15 k+ farmers, 40 % faster processing.">
+  <meta name="keywords" content="MEL, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning, GitHub Repositories, Data Analytics, USAID MEL 2024, Google BI 2025, Financial Analysis">
 
-  <!-- Fonts -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Raleway:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,19 +24,19 @@
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
-<body class="index-page">
+<body class="portfolio-page">
 
-  <!-- ======= Header ======= -->
+  <!-- =======  Header  ======= -->
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html" class="active">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -47,119 +47,205 @@
       </div>
 
     </div>
-  </header><!-- End Header -->
+  </header><!-- /Header -->
 
   <main class="main">
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="hero section d-flex align-items-center">
-      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
-        <h1 data-aos="fade-up" data-aos-delay="200">
-          Hello, I'm <span class="highlight text-primary">Reagan Ochola</span>
-        </h1>
-        <h2>Welcome to My Strategic MEL & Data Analytics Hub</h2>
-        <p data-aos="fade-up" data-aos-delay="400">
-          Strategic MEL Leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability. Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations.
+    <!-- =======  Portfolio Section  ======= -->
+    <section id="portfolio" class="portfolio section">
+
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Portfolio</h2>
+        <p>
+          9 years designing MEL frameworks for multi-country donor programmes.
+          Power-BI + SQL automation cut reporting TAT <strong>50 %</strong> and data-processing time <strong>40 %</strong>
+          while managing <strong>50+ MEL officers</strong> across Kenya.
         </p>
+      </div><!-- End Section Title -->
 
-        <!-- 3-Column Feature Grid -->
-              <div class="row mt-4">
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                  <div class="feature-box">
-                    <i class="bi bi-graph-up text-primary fs-1"></i>
-                    <h5>Data Analytics</h5>
-                    <p>Cut survey errors <strong>35 %</strong> and transform raw field data into actionable insights</p>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-mel">MEL & Analytics</li>
+            <li data-filter=".filter-agriculture">Agriculture</li>
+            <li data-filter=".filter-dashboard">Dashboards</li>
+            <li data-filter=".filter-research">Research</li>
+            <li data-filter=".filter-finance">Finance</li>
+          </ul><!-- End Portfolio Filters -->
+
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+
+            <!-- 1️⃣ Kenya MSME Manufacturing Analysis -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-research">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-1.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                  <div class="feature-box">
-                    <i class="bi bi-speedometer2 text-primary fs-1"></i>
-                    <h5>Power BI Dashboards</h5>
-                    <p>Real-time monitoring solutions that reduce reporting TAT <strong>50 %</strong></p>
-                  </div>
-                </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                  <div class="feature-box">
-                    <i class="bi bi-clipboard-data text-primary fs-1"></i>
-                    <h5>MEL Frameworks</h5>
-                    <p>Donor-compliant frameworks managing <strong>50+ staff</strong> across multiple counties</p>
+                <div class="portfolio-info">
+                  <h4>Kenya MSME Manufacturing Analysis</h4>
+                  <p>5 016 firms, 11 277 jobs, 39.8 % female-owned employment, 8.1 % training-efficiency gain.</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>SQL</span><span>Python</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/mel-case-study-kenya" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
                   </div>
                 </div>
               </div>
+            </div>
 
-        <!-- Featured Projects Cards -->
-              <div class="mt-5" data-aos="fade-up" data-aos-delay="500">
-                <h4>See How Data Drives Strategic Impact</h4>
-                <div class="row g-3">
-                  <div class="col-md-6">
-                    <div class="card h-100">
-                      <div class="card-body">
-                        <h6 class="card-title">Kenya MSME Manufacturing Analysis</h6>
-                        <p class="card-text">5 016 firms, 11 277 jobs, 39.8 % female-owned employment</p>
-                        <a href="portfolio-details.html" class="btn btn-sm btn-primary">View Details</a>
-                      </div>
-                    </div>
+            <!-- 2️⃣ East-Africa Maize Yield Insights -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-dashboard">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
-                  <div class="col-md-6">
-                    <div class="card h-100">
-                      <div class="card-body">
-                        <h6 class="card-title">Pricing Model Analysis: Malawi 2024</h6>
-                        <p class="card-text">Data-driven pricing model for agricultural product bundles</p>
-                        <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" target="_blank" class="btn btn-sm btn-outline-primary">
-                          <i class="bi bi-github"></i> View Code
-                        </a>
-                      </div>
-                    </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>East-Africa Maize Yield Insights</h4>
+                  <p>Interactive Power BI dashboard tracking 18 000+ farmers (Kenya, Rwanda, Tanzania).</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>Agriculture</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
                   </div>
                 </div>
               </div>
+            </div>
 
-        
-        <!-- Centered Buttons -->
-        <div class="hero-actions d-flex justify-content-center gap-3 mt-4" data-aos="fade-up" data-aos-delay="500">
-          <a href="portfolio.html" class="btn btn-primary">Explore Case Studies</a>
-          <a href="contact.html" class="btn btn-outline">Discuss Your Strategy</a>
+            <!-- 3️⃣ AgroImageryTimeline -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-research">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-3.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/AgroImageryTimeline" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>AgroImageryTimeline</h4>
+                  <p>SQL + Python pipeline analysing 85 000+ geotagged field images for maize-crop monitoring.</p>
+                  <div class="portfolio-tags"><span>Python</span><span>SQL</span><span>Geospatial</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/AgroImageryTimeline" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 4️⃣ AgroDashboard (Plotly Dash) -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dashboard filter-agriculture">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/AgroDashboard" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>AgroDashboard</h4>
+                  <p>Plotly Dash web-app with geospatial clustering for real-time maize-yield analytics.</p>
+                  <div class="portfolio-tags"><span>Plotly Dash</span><span>Geospatial</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/AgroDashboard" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 5️⃣ County Agricultural Production Analysis -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-dashboard">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-5.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/county-agricultural-production-analysis" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Agricultural Production Analysis</h4>
+                  <p>An analytical dashboard leveraging Power BI and Python to visualize county-level agricultural production trends.</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>Python</span><span>Agriculture</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 6️⃣ Financial Pricing Model Analysis -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-research filter-finance">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-6.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Financial Pricing Model Analysis</h4>
+                  <p>Advanced financial modeling using Python to analyze pricing strategies and market trends.</p>
+                  <div class="portfolio-tags"><span>Python</span><span>Financial Analysis</span><span>Pandas</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div><!-- /isotope-container -->
         </div>
-      
-        <!-- Social Links -->
-        <div class="social-links mt-4" data-aos="fade-up" data-aos-delay="600">
-          <a href="#"><i class="bi bi-twitter"></i></a>
-          <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" target="_blank"><i class="bi bi-linkedin"></i></a>
-          <a href="#"><i class="bi bi-github"></i></a>
-          <a href="#"><i class="bi bi-dribbble"></i></a>
+
+        <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
+          <a href="https://github.com/Ocholar" target="_blank" class="btn btn-primary">
+            Explore 9-yr MEL Portfolio on GitHub
+          </a>
         </div>
+
       </div>
-    </section><!-- End Hero Section -->
+    </section><!-- /Portfolio Section -->
 
   </main>
 
-  <!-- ======= Footer ======= -->
+  <!-- =======  Footer  ======= -->
   <footer id="footer" class="footer">
     <div class="container">
       <div class="copyright text-center">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
+        Certifications: Google BI · AI-for-MEL · Microsoft Data Analysis · BCG Forage<br>
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer><!-- /Footer -->
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
-    <i class="bi bi-arrow-up-short"></i>
-  </a>
-
-  <!-- Preloader -->
+  <!-- Scroll-Top & Preloader & JS -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -170,9 +256,8 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
