--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Portfolio - Reagan Ochola | Strategic MEL Leader (9 yrs) • Power BI • SQL • Python</title>
   <meta name="description" content="Portfolio of Reagan Ochola – 9 years designing MEL frameworks for multi-country donor programmes, Power BI + SQL automation, 50+ staff, 15 k+ farmers, 40 % faster processing.">
-  <meta name="keywords" content="MEL, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning, GitHub Repositories, Data Analytics, USAID MEL 2024, Google BI 2025">
+  <meta name="keywords" content="MEL, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning, GitHub Repositories, Data Analytics, USAID MEL 2024, Google BI 2025, Financial Analysis">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -72,6 +72,7 @@
             <li data-filter=".filter-agriculture">Agriculture</li>
             <li data-filter=".filter-dashboard">Dashboards</li>
             <li data-filter=".filter-research">Research</li>
+            <li data-filter=".filter-finance">Finance</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
@@ -174,11 +175,33 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Agricultural Production Analysis </h4>
+                  <h4>Agricultural Production Analysis</h4>
                   <p>An analytical dashboard leveraging Power BI and Python to visualize county-level agricultural production trends.</p>
                   <div class="portfolio-tags"><span>Power BI</span><span>Python</span><span>Agriculture</span></div>
                   <div class="repo-links mt-2">
                     <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 6️⃣ Financial Pricing Model Analysis -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-research filter-finance">
+              <div class="portfolio-card h-100">
+                <div class="portfolio-img">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/portfolio-6.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Financial Pricing Model Analysis</h4>
+                  <p>Advanced financial modeling using Python to analyze pricing strategies and market trends.</p>
+                  <div class="portfolio-tags"><span>Python</span><span>Financial Analysis</span><span>Pandas</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" target="_blank" class="btn btn-sm btn-outline-primary">
                       <i class="bi bi-github"></i> View Code
                     </a>
                   </div>
@@ -191,7 +214,7 @@
 
         <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
           <a href="https://github.com/Ocholar" target="_blank" class="btn btn-primary">
-            Explore 9-yr MEL Portfolio on GitHub
+            Explore MEL Portfolio on GitHub
           </a>
         </div>
 
